Update and rename landpage.html to index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       about.addEventListener("click", () => {
         setTimeout(() => {
-          window.location.href = "cee.html";
+          window.location.href = "#";
         }, 2000);
       });
 
