--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       about.addEventListener("click", () => {
         setTimeout(() => {
-          window.location.href = "#";
+          window.location.href = "about.html";
         }, 2000);
       });
 
