--- a/about.html
+++ b/about.html
@@ -21,5 +21,14 @@
         <p>Our goal is to make contact management smooth and spontaneous.<br>We are thrilled to aid you esily manage your contacts. On our platform,you can effortlessly:<br> Add fresh contacts easily.<br> Delete unwanted contacts quickly.<br>And also change the background mode.</p>
       </div>
     </section>
-  </div>           
-</body>             
+  </div>       
+     <script>
+      const getBack = document.getElementById("back");
+      getBack.addEventListener("click", () => {
+        setTimeout(() => {
+          window.location.href = "gr.html";
+        }, 2000);
+      });
+    </script>
+</body>  
+</html>
