--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
+    <button id="back" type="button">
+      Back <br />
+      ⬅
+    </button>
   <div class="heading">
 <h1>About Us</h1>
 <p> We are in the people of Michelle Opara, Susan Ackahand Issahak Issah. We are interns <br>from the CSR Departmentin AmaliTech.</p>
