--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <div class="container">
     <section class="about">
       <div class="about-image">
-        <img src="images/Phone call.png" alt="A person making a phone call">
+        <img src="Phone call.png" alt="A person making a phone call">
       </div>
       <div class="about-content">
         <h2>Contact Management Made Easy</h2>
