--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="about.css">
+    <style>
+        #back{
+            margin-top: 4em;
+    </style>
 </head>
 <body>
     <button id="back" type="button">
@@ -30,7 +34,7 @@
       const getBack = document.getElementById("back");
       getBack.addEventListener("click", () => {
         setTimeout(() => {
-          window.location.href = "gr.html";
+          window.location.href = "index.html";
         }, 2000);
       });
     </script>
