--- a/policy.html
+++ b/policy.html
@@ -9,6 +9,16 @@
         background: linear-gradient(135deg, #003399 5%, #001a66 100%),
           url("OIG3.jfif");
         color: #fff;
+        .button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
       }
     </style>
   </head>
