--- a/terms.html
+++ b/terms.html
@@ -10,6 +10,16 @@
           url("OIG3.jfif");
         color: #fff;
       }
+      .button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
     </style>
   </head>
   <body>
