--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="about.css">
     <style>
         #back{
-            margin-top: 4em;
+            margin-top: 10em;
+            margin-left: 5em;
     </style>
 </head>
 <body>
