--- a/policy.html
+++ b/policy.html
@@ -10,6 +10,12 @@
           url("OIG3.jfif");
         color: #fff;
       }
+      
+#back:hover {
+  background-color: #d2dff5;
+  color: #1a73e8;
+  transform: translateY(-5px);
+}
     </style>
   </head>
   <body>
@@ -73,7 +79,7 @@
       const getBack = document.getElementById("back");
       getBack.addEventListener("click", () => {
         setTimeout(() => {
-          window.location.href = "gr.html";
+          window.location.href = "index.html";
         }, 2000);
       });
     </script>
