--- a/policy.html
+++ b/policy.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Management Policy</title>
     <style>
-      body {
-        background: linear-gradient(135deg, #003399 5%, #001a66 100%),
-          url("OIG3.jfif");
-        color: #fff;
-      }
+    body{
+    background-color: lightblue;
+    background-position: 20px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    line-height: 1.2;
+}
+    button#back {
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: transform 0.2s ease, background-color 0.3s ease;
+}
       
 #back:hover {
   background-color: #d2dff5;
