--- a/policy.html
+++ b/policy.html
@@ -19,7 +19,7 @@
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     transition: transform 0.2s ease, background-color 0.3s ease;
-    margin: 0 4rem;
+    margin: 4em;
 }
       
 #back:hover {
