--- a/terms.html
+++ b/terms.html
@@ -38,7 +38,7 @@
       <h1>Terms of Service</h1>
     </center>
     <center>
-      <h3>1. Acceptance of Terms</h3>
+      <h3>Acceptance of Terms</h3>
       By using MIS Contact Hub, you agree to be bound by these Terms of Service
       (TOS). If you do not agree to these terms, please refrain from using our
       platform. Continued use of the platform constitutes your acceptance of any
@@ -60,7 +60,7 @@
       Deletion: When you delete contacts, they are moved to a “Trash” folder for
       30 days before being permanently deleted. Once permanently deleted,
       contacts cannot be recovered.
-      <h3>. Use of the Platform Permitted Uses:</h3>
+      <h3>Use of the Platform Permitted Uses:</h3>
       MIS Contact Hub is intended for managing personal or professional
       contacts. You agree not to use the platform for any unlawful activities or
       to violate the rights of others.
@@ -69,7 +69,7 @@
       marketing. Attempts to gain unauthorized access to any part of the system.
       Reverse engineering or attempting to extract the source code of the
       platform.
-      <h3>. Data Privacy</h3>
+      <h3>Data Privacy</h3>
       Personal Data: We are committed to protecting your personal data in
       accordance with our Privacy Policy. Your contact data is private and will
       not be shared without your explicit consent. Third-Party Access: You may
@@ -78,44 +78,45 @@
       granted. Compliance: MIS Contact Hub complies with relevant data
       protection laws, such as GDPR and CCPA, to ensure your data is handled
       with care.
-      <h3>. Platform Availability and Changes Service Availability:</h3>
+      <h3>Platform Availability and Changes Service Availability:</h3>
       While we strive to keep MIS Contact Hub available 24/7, we do not
       guarantee uninterrupted or error-free service. Scheduled maintenance or
       unexpected downtime may occur. Modifications: MIS Contact Hub reserves the
       right to modify or discontinue any feature of the platform at any time,
       with or without notice.
-      <h3>. Intellectual Property Ownership:</h3>
+      <h3>Intellectual Property Ownership:</h3>
       All intellectual property rights related to MIS Contact Hub, including
       software, trademarks, and design elements, belong to the platform or its
       licensors. License to Use: You are granted a non-exclusive,
       non-transferable license to use the platform according to these terms.
-      <h3>. Limitation of Liability</h3>
+      <h3>Limitation of Liability</h3>
       MIS Contact Hub will not be liable for any direct, indirect, incidental,
       or consequential damages resulting from the use of the platform, including
       but not limited to loss of data, unauthorized access, or system outages.
       Data Loss: While we take all reasonable measures to protect your contact
       data, you are responsible for creating backups of important information.
-      <h3>. Termination User-Initiated Termination:</h3>
+      <h3>Termination User-Initiated Termination:</h3>
       You may close your account at any time through your account settings. Upon
       termination, your data will be deleted from our systems after a brief
       retention period for recovery purposes. Platform-Initiated Termination: We
       may suspend or terminate your access to the platform if you violate any
       part of these Terms of Service or engage in activities that compromise the
       platform’s integrity.
-      <h3>0. Governing Law</h3>
+      <h3>Governing Law</h3>
       These Terms of Service are governed by and construed in accordance with
       the laws of the jurisdiction in which the platform operates, without
       regard to its conflict of law provisions.
-      <h3>1. Dispute Resolution Mediation:</h3>
+      <h3> Dispute Resolution Mediation:</h3>
       In the event of a dispute arising from the use of MIS Contact Hub, we
       encourage users to seek resolution through informal mediation before
       taking legal action. Legal Proceedings: Any legal claims or disputes
       related to these Terms of Service shall be resolved in the courts of the
       platform’s operational jurisdiction.
-      <h3>2. Changes to the Terms</h3>
+      <h3>Changes to the Terms</h3>
       We may update these Terms of Service periodically. Users will be notified
       of significant changes, and continued use of the platform after updates
       implies agreement to the new terms.
+      <br>
       <h3>
         Contact Us: If you have any questions about these Terms of Service,
         please reach out to us at support@miscontacthub.com.
